// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixRecord form should allow content indicators to be selected 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
-     style=\\"padding: 8px;\\"
+     class=\\"MuiGrid-container-3 StandardPage\\"
+   >
+     <h2
+       class=\\"MuiTypography-root-100 MuiTypography-h4-115 MuiTypography-colorPrimary-130 Page-layoutTitle-305\\"
+     >
+       Request a correction, add more information or upload files
+     </h2>
+     <div
+       class=\\"MuiGrid-item-4 Page-layoutCard-304\\"
+     >
+       <form>
+         <div
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-312 MuiPaper-elevation1-315 MuiPaper-rounded-313 MuiCard-root-311 Cards-card-306 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-339\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-342\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-343\\"
+                   >
+                     Work to be amended
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-345\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-container-3\\"
+                     >
+                       <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                         style=\\"min-width: 1px;\\"
+                       >
+                         <h6
+                           class=\\"MuiTypography-root-100 MuiTypography-h6-117 PublicationCitation-citationTitle-347\\"
+                         >
+                           <a
+                             href=\\"/view/UQ:41878\\"
+                           >
+                             Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth
+                           </a>
+                         </h6>
+                       </div>
+                       <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationText-348\\"
+                       >
+                         <div
+                           class=\\"citationContent citationJournalArticle\\"
+                         >
+                           <span
+                             class=\\"citationAuthors\\"
+                           >
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               He, Y., 
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               Brown, M. A., 
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               Rothnagel, J. A., 
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               Saunders, N. A.
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                                and Smith, R.
+                             </span>
+                              
+                           </span>
+                           <span
+                             class=\\"citationDate\\"
+                           >
+                             (2004).
+                           </span>
+                           <span
+                             class=\\"citationTitle\\"
+                           >
+                              Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth.
+                           </span>
+                           <span
+                             class=\\"citationJournalName\\"
+                           >
+                              Molecular Biology of The Cell 
+                           </span>
+                           <span
+                             class=\\"citationVolumeNumber\\"
+                           >
+                              15 
+                           </span>
+                           <span
+                             class=\\"citationIssueNumber empty\\"
+                           />
+                           <span
+                             class=\\"citationPageRange\\"
+                           >
+                             <span
+                               class=\\"citationStartPage\\"
+                             >
+                               252A
+                             </span>
+                             -
+                             <span
+                               class=\\"citationEndPage\\"
+                             >
+                               253A
+                             </span>
+                           </span>
+                           <span>
+                             . 
+                           </span>
+                           <span
+                             class=\\"citationDOI empty\\"
+                           />
+                         </div>
+                       </div>
+                       <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationCounts-349\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-container-3\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-auto-44\\"
+                           >
+                             <a
+                               aria-label=\\"Full citation in Web of science will open in a new window\\"
+                               class=\\"wosCitationCount CitationCountView-citationCount-354 ExternalLink-externalLink-356\\"
+                               href=\\"http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=000224648802120&SrcAuth=uqueensland\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Full citation in Web of science will open in a new window\\"
+                             >
+                               <span
+                                 class=\\"fez-icon wos large\\"
+                               />
+                               <span
+                                 class=\\"CitationCountView-citationCountNumber-355\\"
+                               >
+                                 2
+                               </span>
+                             </a>
+                             <a
+                               aria-label=\\"Full citation in Google scholar will open in a new window\\"
+                               class=\\"googleCitationCount CitationCountView-citationCount-354 ExternalLink-externalLink-356\\"
+                               href=\\"https://scholar.google.com/scholar?q=intitle:Roles%20of%20heterogeneous%20nuclear%20ribonucleoproteins%20A/B%20in%20cell%20growth\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Full citation in Google scholar will open in a new window\\"
+                             >
+                               <span
+                                 class=\\"fez-icon google large\\"
+                               />
+                             </a>
+                             <span
+                               class=\\"noOaIcon\\"
+                             />
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4\\"
+                           >
+                             <a
+                               class=\\"CitationCounts-statsLink-353 ExternalLink-externalLink-356\\"
+                               href=\\"https://app.library.uq.edu.au/#/authors/view/UQ:41878\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Roles of heterogeneous nuclear ribonucleoproteins A/B in cell growth\\"
+                             >
+                               <svg
+                                 aria-hidden=\\"true\\"
+                                 class=\\"MuiSvgIcon-root-358 ExternalLink-externalLinkIcon-357\\"
+                                 focusable=\\"false\\"
+                                 role=\\"presentation\\"
+                                 viewBox=\\"0 0 24 24\\"
                                >
+                                 <path
+                                   d=\\"M0 0h24v24H0z\\"
+                                   fill=\\"none\\"
+                                 />
+                                 <path
+                                   d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                                 />
+                               </svg>
+                               View full statistics
+                             </a>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                           />
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+                 <hr
+                   class=\\"MuiDivider-root-367 PublicationCitation-divider-346\\"
+                 />
                  <div
-       class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-8-25 MuiGrid-align-items-xs-center-11 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                 >
+                   <span
+                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 MuiTypography-gutterBottom-127\\"
+                   >
+                     <span
+                       class=\\"PublicationCitation-contentIndicatorTitle-351\\"
+                     >
+                       Content Indicators:
+                     </span>
+                     Scholarship of Teaching and Learning, Protocol
+                   </span>
+                 </div>
+                 <div
+                   class=\\"MuiFormControl-root-372\\"
+                   style=\\"width: 100%;\\"
                  >
+                   <label
+                     class=\\"MuiFormLabel-root-387 MuiFormLabel-error-390 MuiInputLabel-error-379 MuiFormLabel-required-392 MuiInputLabel-required-380 MuiInputLabel-root-376 MuiInputLabel-formControl-381 MuiInputLabel-animated-384\\"
+                     data-shrink=\\"false\\"
+                     id=\\"Select an action-label\\"
+                   >
+                     Select an action
+                     <span
+                       class=\\"MuiFormLabel-asterisk-393 MuiFormLabel-error-390 MuiInputLabel-error-379\\"
+                     >
+                        *
+                     </span>
+                   </label>
                    <div
-         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-         style=\\"text-align: center;\\"
+                     class=\\"MuiInputBase-root-414 MuiInput-root-401 MuiInput-underline-405 MuiInputBase-error-420 MuiInput-error-406 MuiInputBase-formControl-415 MuiInput-formControl-402\\"
+                     label=\\"Select an action\\"
+                     required=\\"\\"
+                   >
+                     <div
+                       class=\\"MuiSelect-root-394\\"
                      >
                        <div
-           class=\\"MuiCircularProgress-root-294 MuiCircularProgress-colorPrimary-297 MuiCircularProgress-indeterminate-296\\"
-           role=\\"progressbar\\"
-           style=\\"width: 18px; height: 18px;\\"
+                         aria-haspopup=\\"true\\"
+                         aria-pressed=\\"false\\"
+                         class=\\"MuiSelect-select-395 MuiSelect-selectMenu-398 MuiInputBase-input-424 MuiInput-input-409\\"
+                         id=\\"fixAction\\"
+                         role=\\"button\\"
+                         tabindex=\\"0\\"
                        >
+                         <span>
+                           ​
+                         </span>
+                       </div>
+                       <input
+                         aria-labelledby=\\"Select an action-label\\"
+                         id=\\"Select an action\\"
+                         name=\\"fixAction\\"
+                         type=\\"hidden\\"
+                         value=\\"\\"
+                       />
                        <svg
-             class=\\"MuiCircularProgress-svg-299\\"
-             viewBox=\\"22 22 44 44\\"
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-358 MuiSelect-icon-400\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M7 10l5 5 5-5z\\"
+                         />
+                       </svg>
+                     </div>
+                   </div>
+                   <p
+                     class=\\"MuiFormHelperText-root-464 MuiFormHelperText-error-465 MuiFormHelperText-required-471\\"
                    >
-             <circle
-               class=\\"MuiCircularProgress-circle-300 MuiCircularProgress-circleIndeterminate-302\\"
-               cx=\\"44\\"
-               cy=\\"44\\"
+                     This field is required
+                   </p>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-487 Alert-common-479\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-480 alert-icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-358 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-               r=\\"21\\"
-               stroke-width=\\"2\\"
                          />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
                        </svg>
                      </div>
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-481 alert-text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul />
+                       </span>
+                     </div>
                    </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
          <div
-         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-         style=\\"text-align: center;\\"
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+           />
+           <div
+             class=\\"MuiGrid-item-4\\"
            >
+             <button
+               class=\\"MuiButtonBase-root-461 MuiButton-root-435 MuiButton-contained-446 MuiButton-raised-449 MuiButton-fullWidth-460\\"
+               tabindex=\\"0\\"
+               type=\\"button\\"
+             >
                <span
-           class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorPrimary-130\\"
-           style=\\"font-size: 1.33rem;\\"
+                 class=\\"MuiButton-label-436\\"
                >
-           Loading work
+                 Cancel
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-472\\"
+               />
+             </button>
            </div>
+         </div>
+       </form>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`FixRecord form should allow content indicators to be selected 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -266,11 +266,12 @@
                      <div
                        class=\\"MuiSelect-root-394\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
-                         aria-pressed=\\"false\\"
+                         aria-owns=\\"menu-fixAction\\"
+                         aria-pressed=\\"true\\"
                          class=\\"MuiSelect-select-395 MuiSelect-selectMenu-398 MuiInputBase-input-424 MuiInput-input-409\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
                          tabindex=\\"0\\"
                        >"
`;

exports[`FixRecord form should allow content indicators to be selected 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -245,67 +245,399 @@
                  <div
                    class=\\"MuiFormControl-root-372\\"
                    style=\\"width: 100%;\\"
                  >
                    <label
-                     class=\\"MuiFormLabel-root-387 MuiFormLabel-error-390 MuiInputLabel-error-379 MuiFormLabel-required-392 MuiInputLabel-required-380 MuiInputLabel-root-376 MuiInputLabel-formControl-381 MuiInputLabel-animated-384\\"
-                     data-shrink=\\"false\\"
+                     class=\\"MuiFormLabel-root-387 MuiFormLabel-filled-391 MuiFormLabel-required-392 MuiInputLabel-required-380 MuiInputLabel-root-376 MuiInputLabel-formControl-381 MuiInputLabel-animated-384 MuiInputLabel-shrink-383\\"
+                     data-shrink=\\"true\\"
                      id=\\"Select an action-label\\"
                    >
                      Select an action
                      <span
-                       class=\\"MuiFormLabel-asterisk-393 MuiFormLabel-error-390 MuiInputLabel-error-379\\"
+                       class=\\"MuiFormLabel-asterisk-393\\"
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-414 MuiInput-root-401 MuiInput-underline-405 MuiInputBase-error-420 MuiInput-error-406 MuiInputBase-formControl-415 MuiInput-formControl-402\\"
+                     class=\\"MuiInputBase-root-414 MuiInput-root-401 MuiInput-underline-405 MuiInputBase-formControl-415 MuiInput-formControl-402\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-394\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
-                         aria-owns=\\"menu-fixAction\\"
-                         aria-pressed=\\"true\\"
+                         aria-pressed=\\"false\\"
                          class=\\"MuiSelect-select-395 MuiSelect-selectMenu-398 MuiInputBase-input-424 MuiInput-input-409\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
                          tabindex=\\"0\\"
                        >
-                         <span>
-                           ​
-                         </span>
+                         I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          aria-labelledby=\\"Select an action-label\\"
                          id=\\"Select an action\\"
                          name=\\"fixAction\\"
                          type=\\"hidden\\"
-                         value=\\"\\"
+                         value=\\"fix\\"
                        />
                        <svg
                          aria-hidden=\\"true\\"
                          class=\\"MuiSvgIcon-root-358 MuiSelect-icon-400\\"
                          focusable=\\"false\\"
                          role=\\"presentation\\"
                          viewBox=\\"0 0 24 24\\"
                        >
                          <path
                            d=\\"M7 10l5 5 5-5z\\"
+                         />
+                       </svg>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div />
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-312 MuiPaper-elevation1-315 MuiPaper-rounded-313 MuiCard-root-311 Cards-card-306 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-339\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-342\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-343\\"
+                   >
+                     Content Indicators
+                   </h3>
+                 </div>
+                 <div
+                   class=\\"MuiCardHeader-action-341\\"
+                 >
+                   <button
+                     class=\\"MuiButtonBase-root-461 MuiIconButton-root-537\\"
+                     tabindex=\\"0\\"
+                     title=\\"Click for more information\\"
+                     type=\\"button\\"
+                   >
+                     <span
+                       class=\\"MuiIconButton-label-542\\"
+                     >
+                       <svg
+                         aria-hidden=\\"false\\"
+                         class=\\"MuiSvgIcon-root-358 HelpIcon-helpIcon-528\\"
+                         focusable=\\"false\\"
+                         role=\\"img\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
                          />
+                         <path
+                           d=\\"M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z\\"
+                         />
+                         <title>
+                           Click for more information
+                         </title>
                        </svg>
+                     </span>
+                     <span
+                       class=\\"MuiTouchRipple-root-472\\"
+                     />
+                   </button>
                  </div>
                </div>
+               <div
+                 class=\\"MuiCardContent-root-345\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
                      <p
-                     class=\\"MuiFormHelperText-root-464 MuiFormHelperText-error-465 MuiFormHelperText-required-471\\"
+                       class=\\"MuiTypography-root-100 MuiTypography-body2-108\\"
+                     >
+                       You can select multiple (of 3 available) content indicators to add more information about your work, but you cannot remove indicators already selected. To amend existing information, suggest a correction below.
+                     </p>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-372 MuiFormControl-fullWidth-375\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-387 MuiFormLabel-filled-391 MuiInputLabel-root-376 MuiInputLabel-formControl-381 MuiInputLabel-animated-384 MuiInputLabel-shrink-383\\"
+                         data-shrink=\\"true\\"
+                         id=\\"Please select relevant indicator(s).-label\\"
+                       >
+                         Please select relevant indicator(s).
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-414 MuiInput-root-401 MuiInput-underline-405 MuiInputBase-formControl-415 MuiInput-formControl-402\\"
+                       >
+                         <div
+                           class=\\"MuiSelect-root-394\\"
+                         >
+                           <div
+                             aria-haspopup=\\"true\\"
+                             aria-pressed=\\"false\\"
+                             class=\\"MuiSelect-select-395 MuiSelect-selectMenu-398 MuiInputBase-input-424 MuiInput-input-409\\"
+                             id=\\"content-indicators\\"
+                             role=\\"button\\"
+                             tabindex=\\"0\\"
+                           >
+                             Scholarship of Teaching and Learning, Protocol
+                           </div>
+                           <input
+                             style=\\"border: 1px solid red;\\"
+                             type=\\"hidden\\"
+                             value=\\"454079,454080\\"
+                           />
+                           <svg
+                             aria-hidden=\\"true\\"
+                             class=\\"MuiSvgIcon-root-358 MuiSelect-icon-400\\"
+                             focusable=\\"false\\"
+                             role=\\"presentation\\"
+                             viewBox=\\"0 0 24 24\\"
+                           >
+                             <path
+                               d=\\"M7 10l5 5 5-5z\\"
+                             />
+                           </svg>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-312 MuiPaper-elevation1-315 MuiPaper-rounded-313 MuiCard-root-311 Cards-card-306 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-339\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-342\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-343\\"
+                   >
+                     Suggest a correction
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-345\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-16-26\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-372 MuiFormControl-fullWidth-375\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-387 MuiInputLabel-root-376 MuiInputLabel-formControl-381 MuiInputLabel-animated-384\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
+                         id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
+                       >
+                         Describe the problem with this record, eg record is a duplicate, or suggested changes
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-414 MuiInput-root-401 MuiInput-underline-405 MuiInputBase-fullWidth-423 MuiInput-fullWidth-408 MuiInputBase-formControl-415 MuiInput-formControl-402 MuiInputBase-multiline-422 MuiInput-multiline-407\\"
+                       >
+                         <textarea
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
+                           aria-labelledby=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
+                           class=\\"MuiInputBase-input-424 MuiInput-input-409 MuiInputBase-inputMultiline-426 MuiInput-inputMultiline-411\\"
+                           id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
+                           label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
+                           name=\\"comments\\"
+                           rows=\\"3\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-372 MuiFormControl-fullWidth-375\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-387 MuiInputLabel-root-376 MuiInputLabel-formControl-381 MuiInputLabel-animated-384\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Link(URL)\\"
+                         id=\\"Link(URL)-label\\"
+                       >
+                         Link (URL)
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-414 MuiInput-root-401 MuiInput-underline-405 MuiInputBase-fullWidth-423 MuiInput-fullWidth-408 MuiInputBase-formControl-415 MuiInput-formControl-402\\"
+                       >
+                         <input
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Link (URL)\\"
+                           aria-labelledby=\\"Link(URL)-label\\"
+                           class=\\"MuiInputBase-input-424 MuiInput-input-409\\"
+                           id=\\"Link(URL)\\"
+                           label=\\"Link (URL)\\"
+                           name=\\"rek_link\\"
+                           type=\\"text\\"
+                           value=\\"\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-312 MuiPaper-elevation1-315 MuiPaper-rounded-313 MuiCard-root-311 Cards-card-306 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-339\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-342\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-343\\"
+                   >
+                     Upload files
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-345\\"
+               >
+                 <div>
+                   Upload an Open Access file, HERDC evidence or an NTRO Research Statement
+                 </div>
+                 <p
+                   class=\\"MuiTypography-root-100 MuiTypography-body2-108 MuiTypography-gutterBottom-127\\"
+                 >
+                   You may add up to 10 files (max 8GB each)
+                 </p>
+                 <div
+                   class=\\"MuiGrid-container-3\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       tabindex=\\"0\\"
+                     >
+                       <div
+                         aria-disabled=\\"false\\"
+                         class=\\"\\"
+                         style=\\"position: relative; padding: 0px;\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-container-3 FileUploadDropzoneStaticContent-dropzone-545\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <p
+                               class=\\"MuiTypography-root-100 MuiTypography-body2-108 FileUploadDropzoneStaticContent-heading-546\\"
+                             >
+                               File upload restrictions
+                             </p>
+                             <div>
+                               Please ensure your files:
+                               <ul>
+                                 <li>
+                                   begin with a letter and are less than 45 characters long
+                                 </li>
+                                 <li>
+                                   contain only upper and lowercase alphanumeric characters, and underscores
+                                 </li>
+                                 <li>
+                                   have only a single period which precedes the file extension: e.g. “.pdf”, “.mov”, “.tiff”, “.wav” etc.
+                                 </li>
+                                 <li>
+                                   two periods are allowed for multipart zip files.  Allowed formats for part description are: e.g. “.001 ... .999”, “.r01 ... .r999” and “.part1 ... .part999”
+                                 </li>
+                                 <li>
+                                   are uploaded individually and not inside a folder
+                                 </li>
+                               </ul>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-container-3 MuiGrid-direction-xs-column-6 MuiGrid-align-items-xs-center-11 MuiGrid-justify-xs-center-20 FileUploadDropzoneStaticContent-instructions-547\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <svg
+                                   aria-hidden=\\"true\\"
+                                   class=\\"MuiSvgIcon-root-358 FileUploadDropzoneStaticContent-cloudIcon-548\\"
+                                   focusable=\\"false\\"
+                                   role=\\"presentation\\"
+                                   viewBox=\\"0 0 24 24\\"
                                  >
-                     This field is required
+                                   <path
+                                     d=\\"M0 0h24v24H0z\\"
+                                     fill=\\"none\\"
+                                   />
+                                   <path
+                                     d=\\"M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z\\"
+                                   />
+                                 </svg>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <p>
+                                   Click here to select files, or drag files into this area to upload
                                  </p>
+                               </div>
+                             </div>
+                           </div>
+                         </div>
+                         <input
+                           aria-label=\\"Upload files\\"
+                           autocomplete=\\"off\\"
+                           id=\\"Uploader\\"
+                           multiple=\\"\\"
+                           style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
+                           type=\\"file\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -349,11 +681,15 @@
                        <b>
                          Validation - 
                        </b>
                        <span>
                          Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul />
+                         <ul>
+                           <li>
+                             Please provide additional information, corrections or upload file(s).
+                           </li>
+                         </ul>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
@@ -380,10 +716,27 @@
                  Cancel
                </span>
                <span
                  class=\\"MuiTouchRipple-root-472\\"
                />
+             </button>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-461 MuiButtonBase-disabled-462 MuiButton-root-435 MuiButton-contained-446 MuiButton-containedPrimary-447 MuiButton-raised-449 MuiButton-raisedPrimary-450 MuiButton-disabled-455 MuiButton-fullWidth-460\\"
+               disabled=\\"\\"
+               id=\\"fixSubmit\\"
+               tabindex=\\"-1\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-436\\"
+               >
+                 Submit
+               </span>
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should allow content indicators to be selected 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -390,11 +390,12 @@
                          <div
                            class=\\"MuiSelect-root-394\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-395 MuiSelect-selectMenu-398 MuiInputBase-input-424 MuiInput-input-409\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >"
`;

exports[`FixRecord form should allow content indicators to be selected 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -397,16 +397,16 @@
                              class=\\"MuiSelect-select-395 MuiSelect-selectMenu-398 MuiInputBase-input-424 MuiInput-input-409\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol
+                             Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080\\"
+                             value=\\"454079,454080,454081\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-358 MuiSelect-icon-400\\"
                              focusable=\\"false\\"
@@ -639,67 +639,12 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div
-             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
-           >
-             <div
-               class=\\"Alert\\"
-               style=\\"padding: 12px;\\"
-             >
-               <div
-                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-487 Alert-common-479\\"
-               >
-                 <div
-                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
-                 >
-                   <div
-                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
-                   >
-                     <div
-                       class=\\"MuiGrid-item-4 Alert-icon-480 alert-icon\\"
-                     >
-                       <svg
-                         aria-hidden=\\"true\\"
-                         class=\\"MuiSvgIcon-root-358 icon\\"
-                         focusable=\\"false\\"
-                         role=\\"presentation\\"
-                         viewBox=\\"0 0 24 24\\"
-                       >
-                         <path
-                           d=\\"M0 0h24v24H0z\\"
-                           fill=\\"none\\"
-                         />
-                         <path
-                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
-                         />
-                       </svg>
          </div>
          <div
-                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-481 alert-text\\"
-                     >
-                       <b>
-                         Validation - 
-                       </b>
-                       <span>
-                         Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul>
-                           <li>
-                             Please provide additional information, corrections or upload file(s).
-                           </li>
-                         </ul>
-                       </span>
-                     </div>
-                   </div>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-         <div
            class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
          >
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
            />
@@ -723,21 +668,23 @@
            </div>
            <div
              class=\\"MuiGrid-item-4\\"
            >
              <button
-               class=\\"MuiButtonBase-root-461 MuiButtonBase-disabled-462 MuiButton-root-435 MuiButton-contained-446 MuiButton-containedPrimary-447 MuiButton-raised-449 MuiButton-raisedPrimary-450 MuiButton-disabled-455 MuiButton-fullWidth-460\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-461 MuiButton-root-435 MuiButton-contained-446 MuiButton-containedPrimary-447 MuiButton-raised-449 MuiButton-raisedPrimary-450 MuiButton-fullWidth-460\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-436\\"
                >
                  Submit
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-472\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should allow content indicators to be selected 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -397,16 +397,16 @@
                              class=\\"MuiSelect-select-395 MuiSelect-selectMenu-398 MuiInputBase-input-424 MuiInput-input-409\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol, Case Study
+                             Scholarship of Teaching and Learning, Protocol
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080,454081\\"
+                             value=\\"454079,454080\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-358 MuiSelect-icon-400\\"
                              focusable=\\"false\\"
@@ -639,12 +639,67 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-557 Alert-common-549\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-550 alert-icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-358 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
+                       </svg>
                      </div>
                      <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-551 alert-text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul>
+                           <li>
+                             Please provide additional information, corrections or upload file(s).
+                           </li>
+                         </ul>
+                       </span>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div
            class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
          >
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
            />
@@ -668,23 +723,21 @@
            </div>
            <div
              class=\\"MuiGrid-item-4\\"
            >
              <button
-               class=\\"MuiButtonBase-root-461 MuiButton-root-435 MuiButton-contained-446 MuiButton-containedPrimary-447 MuiButton-raised-449 MuiButton-raisedPrimary-450 MuiButton-fullWidth-460\\"
+               class=\\"MuiButtonBase-root-461 MuiButtonBase-disabled-462 MuiButton-root-435 MuiButton-contained-446 MuiButton-containedPrimary-447 MuiButton-raised-449 MuiButton-raisedPrimary-450 MuiButton-disabled-455 MuiButton-fullWidth-460\\"
+               disabled=\\"\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-436\\"
                >
                  Submit
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-472\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should validate the form where applicable and submit correctly 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -257,24 +257,23 @@
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
+                     class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-disabled-979 MuiInput-disabled-966 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-956\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
                          aria-pressed=\\"false\\"
-                         class=\\"MuiSelect-select-957 MuiSelect-selectMenu-960 MuiInputBase-input-986 MuiInput-input-971\\"
+                         class=\\"MuiSelect-select-957 MuiSelect-selectMenu-960 MuiSelect-disabled-961 MuiInputBase-input-986 MuiInput-input-971 MuiInputBase-disabled-979 MuiInput-disabled-966\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
-                         tabindex=\\"0\\"
                        >
                          I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          aria-labelledby=\\"Select an action-label\\"
@@ -383,23 +382,22 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
+                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-disabled-979 MuiInput-disabled-966 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
                        >
                          <div
                            class=\\"MuiSelect-root-956\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-957 MuiSelect-selectMenu-960 MuiInputBase-input-986 MuiInput-input-971\\"
+                             class=\\"MuiSelect-select-957 MuiSelect-selectMenu-960 MuiSelect-disabled-961 MuiInputBase-input-986 MuiInput-input-971 MuiInputBase-disabled-979 MuiInput-disabled-966\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
-                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -455,25 +453,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-934 MuiFormControl-fullWidth-937\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-949 MuiInputLabel-root-938 MuiInputLabel-formControl-943 MuiInputLabel-animated-946\\"
+                         class=\\"MuiFormLabel-root-949 MuiFormLabel-disabled-951 MuiInputLabel-disabled-940 MuiInputLabel-root-938 MuiInputLabel-formControl-943 MuiInputLabel-animated-946\\"
                          data-shrink=\\"false\\"
                          for=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                          id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
                        >
                          Describe the problem with this record, eg record is a duplicate, or suggested changes
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-fullWidth-985 MuiInput-fullWidth-970 MuiInputBase-formControl-977 MuiInput-formControl-964 MuiInputBase-multiline-984 MuiInput-multiline-969\\"
+                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-disabled-979 MuiInput-disabled-966 MuiInputBase-fullWidth-985 MuiInput-fullWidth-970 MuiInputBase-formControl-977 MuiInput-formControl-964 MuiInputBase-multiline-984 MuiInput-multiline-969\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            aria-labelledby=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
-                           class=\\"MuiInputBase-input-986 MuiInput-input-971 MuiInputBase-inputMultiline-988 MuiInput-inputMultiline-973\\"
+                           class=\\"MuiInputBase-input-986 MuiInput-input-971 MuiInputBase-disabled-979 MuiInput-disabled-966 MuiInputBase-inputMultiline-988 MuiInput-inputMultiline-973\\"
+                           disabled=\\"\\"
                            id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                            label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -485,25 +484,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-934 MuiFormControl-fullWidth-937\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-949 MuiInputLabel-root-938 MuiInputLabel-formControl-943 MuiInputLabel-animated-946\\"
+                         class=\\"MuiFormLabel-root-949 MuiFormLabel-disabled-951 MuiInputLabel-disabled-940 MuiInputLabel-root-938 MuiInputLabel-formControl-943 MuiInputLabel-animated-946\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-fullWidth-985 MuiInput-fullWidth-970 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
+                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-disabled-979 MuiInput-disabled-966 MuiInputBase-fullWidth-985 MuiInput-fullWidth-970 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-986 MuiInput-input-971\\"
+                           class=\\"MuiInputBase-input-986 MuiInput-input-971 MuiInputBase-disabled-979 MuiInput-disabled-966\\"
+                           disabled=\\"\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -553,11 +553,11 @@
                    >
                      <div
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"false\\"
+                         aria-disabled=\\"true\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-565 FileUploadDropzoneStaticContent-dropzone-1107\\"
@@ -627,10 +627,11 @@
                            </div>
                          </div>
                          <input
                            aria-label=\\"Upload files\\"
                            autocomplete=\\"off\\"
+                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -639,52 +640,100 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-566 MuiGrid-grid-xs-12-605\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-565 MuiGrid-spacing-xs-24-589 MuiGrid-align-items-xs-flex-start-574 MuiGrid-align-content-xs-center-577 MuiGrid-justify-xs-center-582 Alert-info_outline-1123 Alert-common-1111\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-566 MuiGrid-grid-xs-12-605 MuiGrid-grid-sm-true-607\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-565 MuiGrid-align-items-xs-flex-start-574 MuiGrid-align-content-xs-center-577 MuiGrid-justify-xs-center-582\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-566 Alert-icon-1112 alert-icon\\"
+                     >
+                       <div
+                         class=\\"MuiCircularProgress-root-1125 MuiCircularProgress-colorPrimary-1128 MuiCircularProgress-indeterminate-1127 spinner\\"
+                         role=\\"progressbar\\"
+                         style=\\"width: 38px; height: 38px;\\"
+                       >
+                         <svg
+                           class=\\"MuiCircularProgress-svg-1130\\"
+                           viewBox=\\"22 22 44 44\\"
+                         >
+                           <circle
+                             class=\\"MuiCircularProgress-circle-1131 MuiCircularProgress-circleIndeterminate-1133\\"
+                             cx=\\"44\\"
+                             cy=\\"44\\"
+                             fill=\\"none\\"
+                             r=\\"20.5\\"
+                             stroke-width=\\"3\\"
+                           />
+                         </svg>
+                       </div>
                      </div>
                      <div
+                       class=\\"MuiGrid-item-566 MuiGrid-grid-xs-true-593 Alert-text-1113 alert-text\\"
+                     >
+                       <b>
+                         Saving - 
+                       </b>
+                       Request is being processed.
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div
            class=\\"MuiGrid-container-565 MuiGrid-spacing-xs-24-589\\"
          >
            <div
              class=\\"MuiGrid-item-566 MuiGrid-grid-xs-true-593\\"
            />
            <div
              class=\\"MuiGrid-item-566\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1023 MuiButton-root-997 MuiButton-contained-1008 MuiButton-raised-1011 MuiButton-fullWidth-1022\\"
-               tabindex=\\"0\\"
+               class=\\"MuiButtonBase-root-1023 MuiButtonBase-disabled-1024 MuiButton-root-997 MuiButton-contained-1008 MuiButton-raised-1011 MuiButton-disabled-1017 MuiButton-fullWidth-1022\\"
+               disabled=\\"\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-998\\"
                >
                  Cancel
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1034\\"
-               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-566\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1023 MuiButton-root-997 MuiButton-contained-1008 MuiButton-containedPrimary-1009 MuiButton-raised-1011 MuiButton-raisedPrimary-1012 MuiButton-fullWidth-1022\\"
+               class=\\"MuiButtonBase-root-1023 MuiButtonBase-disabled-1024 MuiButton-root-997 MuiButton-contained-1008 MuiButton-containedPrimary-1009 MuiButton-raised-1011 MuiButton-raisedPrimary-1012 MuiButton-disabled-1017 MuiButton-fullWidth-1022\\"
+               disabled=\\"\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-998\\"
                >
                  Submit
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1034\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`FixRecord form should validate the form where applicable and submit correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -257,23 +257,24 @@
                      >
                         *
                      </span>
                    </label>
                    <div
-                     class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-disabled-979 MuiInput-disabled-966 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
+                     class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
                      label=\\"Select an action\\"
                      required=\\"\\"
                    >
                      <div
                        class=\\"MuiSelect-root-956\\"
                      >
                        <div
                          aria-haspopup=\\"true\\"
                          aria-pressed=\\"false\\"
-                         class=\\"MuiSelect-select-957 MuiSelect-selectMenu-960 MuiSelect-disabled-961 MuiInputBase-input-986 MuiInput-input-971 MuiInputBase-disabled-979 MuiInput-disabled-966\\"
+                         class=\\"MuiSelect-select-957 MuiSelect-selectMenu-960 MuiInputBase-input-986 MuiInput-input-971\\"
                          id=\\"fixAction\\"
                          role=\\"button\\"
+                         tabindex=\\"0\\"
                        >
                          I am the author/editor/contributor of this work - I would like to add information, make a correction, or upload files
                        </div>
                        <input
                          aria-labelledby=\\"Select an action-label\\"
@@ -297,11 +298,11 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div />
+           <span />
            <div
              class=\\"MuiGrid-item-566 MuiGrid-grid-xs-12-605\\"
            >
              <div
                class=\\"MuiPaper-root-874 MuiPaper-elevation1-877 MuiPaper-rounded-875 MuiCard-root-873 Cards-card-868 StandardCard\\"
@@ -382,22 +383,23 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-disabled-979 MuiInput-disabled-966 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
+                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
                        >
                          <div
                            class=\\"MuiSelect-root-956\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-957 MuiSelect-selectMenu-960 MuiSelect-disabled-961 MuiInputBase-input-986 MuiInput-input-971 MuiInputBase-disabled-979 MuiInput-disabled-966\\"
+                             class=\\"MuiSelect-select-957 MuiSelect-selectMenu-960 MuiInputBase-input-986 MuiInput-input-971\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
+                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -453,26 +455,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-934 MuiFormControl-fullWidth-937\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-949 MuiFormLabel-disabled-951 MuiInputLabel-disabled-940 MuiInputLabel-root-938 MuiInputLabel-formControl-943 MuiInputLabel-animated-946\\"
+                         class=\\"MuiFormLabel-root-949 MuiInputLabel-root-938 MuiInputLabel-formControl-943 MuiInputLabel-animated-946\\"
                          data-shrink=\\"false\\"
                          for=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                          id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
                        >
                          Describe the problem with this record, eg record is a duplicate, or suggested changes
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-disabled-979 MuiInput-disabled-966 MuiInputBase-fullWidth-985 MuiInput-fullWidth-970 MuiInputBase-formControl-977 MuiInput-formControl-964 MuiInputBase-multiline-984 MuiInput-multiline-969\\"
+                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-fullWidth-985 MuiInput-fullWidth-970 MuiInputBase-formControl-977 MuiInput-formControl-964 MuiInputBase-multiline-984 MuiInput-multiline-969\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            aria-labelledby=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges-label\\"
-                           class=\\"MuiInputBase-input-986 MuiInput-input-971 MuiInputBase-disabled-979 MuiInput-disabled-966 MuiInputBase-inputMultiline-988 MuiInput-inputMultiline-973\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-986 MuiInput-input-971 MuiInputBase-inputMultiline-988 MuiInput-inputMultiline-973\\"
                            id=\\"Describetheproblemwiththisrecord,egrecordisaduplicate,orsuggestedchanges\\"
                            label=\\"Describe the problem with this record, eg record is a duplicate, or suggested changes\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -484,26 +485,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-934 MuiFormControl-fullWidth-937\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-949 MuiFormLabel-disabled-951 MuiInputLabel-disabled-940 MuiInputLabel-root-938 MuiInputLabel-formControl-943 MuiInputLabel-animated-946\\"
+                         class=\\"MuiFormLabel-root-949 MuiInputLabel-root-938 MuiInputLabel-formControl-943 MuiInputLabel-animated-946\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-disabled-979 MuiInput-disabled-966 MuiInputBase-fullWidth-985 MuiInput-fullWidth-970 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
+                         class=\\"MuiInputBase-root-976 MuiInput-root-963 MuiInput-underline-967 MuiInputBase-fullWidth-985 MuiInput-fullWidth-970 MuiInputBase-formControl-977 MuiInput-formControl-964\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-986 MuiInput-input-971 MuiInputBase-disabled-979 MuiInput-disabled-966\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-986 MuiInput-input-971\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -553,11 +553,11 @@
                    >
                      <div
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"true\\"
+                         aria-disabled=\\"false\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-565 FileUploadDropzoneStaticContent-dropzone-1107\\"
@@ -627,11 +627,10 @@
                            </div>
                          </div>
                          <input
                            aria-label=\\"Upload files\\"
                            autocomplete=\\"off\\"
-                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -648,48 +647,44 @@
              <div
                class=\\"Alert\\"
                style=\\"padding: 12px;\\"
              >
                <div
-                 class=\\"MuiGrid-container-565 MuiGrid-spacing-xs-24-589 MuiGrid-align-items-xs-flex-start-574 MuiGrid-align-content-xs-center-577 MuiGrid-justify-xs-center-582 Alert-info_outline-1123 Alert-common-1111\\"
+                 class=\\"MuiGrid-container-565 MuiGrid-spacing-xs-24-589 MuiGrid-align-items-xs-flex-start-574 MuiGrid-align-content-xs-center-577 MuiGrid-justify-xs-center-582 Alert-done-1148 Alert-common-1135\\"
                >
                  <div
                    class=\\"MuiGrid-item-566 MuiGrid-grid-xs-12-605 MuiGrid-grid-sm-true-607\\"
                  >
                    <div
                      class=\\"MuiGrid-container-565 MuiGrid-align-items-xs-flex-start-574 MuiGrid-align-content-xs-center-577 MuiGrid-justify-xs-center-582\\"
-                   >
-                     <div
-                       class=\\"MuiGrid-item-566 Alert-icon-1112 alert-icon\\"
                    >
                      <div
-                         class=\\"MuiCircularProgress-root-1125 MuiCircularProgress-colorPrimary-1128 MuiCircularProgress-indeterminate-1127 spinner\\"
-                         role=\\"progressbar\\"
-                         style=\\"width: 38px; height: 38px;\\"
+                       class=\\"MuiGrid-item-566 Alert-icon-1136 alert-icon\\"
                      >
                        <svg
-                           class=\\"MuiCircularProgress-svg-1130\\"
-                           viewBox=\\"22 22 44 44\\"
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-920 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
                        >
-                           <circle
-                             class=\\"MuiCircularProgress-circle-1131 MuiCircularProgress-circleIndeterminate-1133\\"
-                             cx=\\"44\\"
-                             cy=\\"44\\"
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-                             r=\\"20.5\\"
-                             stroke-width=\\"3\\"
                          />
+                         <path
+                           d=\\"M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z\\"
+                         />
                        </svg>
-                       </div>
                      </div>
                      <div
-                       class=\\"MuiGrid-item-566 MuiGrid-grid-xs-true-593 Alert-text-1113 alert-text\\"
+                       class=\\"MuiGrid-item-566 MuiGrid-grid-xs-true-593 Alert-text-1137 alert-text\\"
                      >
                        <b>
-                         Saving - 
+                         Success - 
                        </b>
-                       Request is being processed.
+                       Fix record request has been submitted successfully.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -703,37 +698,41 @@
            />
            <div
              class=\\"MuiGrid-item-566\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1023 MuiButtonBase-disabled-1024 MuiButton-root-997 MuiButton-contained-1008 MuiButton-raised-1011 MuiButton-disabled-1017 MuiButton-fullWidth-1022\\"
-               disabled=\\"\\"
-               tabindex=\\"-1\\"
+               class=\\"MuiButtonBase-root-1023 MuiButton-root-997 MuiButton-contained-1008 MuiButton-raised-1011 MuiButton-fullWidth-1022\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-998\\"
                >
                  Cancel
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1034\\"
+               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-566\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1023 MuiButtonBase-disabled-1024 MuiButton-root-997 MuiButton-contained-1008 MuiButton-containedPrimary-1009 MuiButton-raised-1011 MuiButton-raisedPrimary-1012 MuiButton-disabled-1017 MuiButton-fullWidth-1022\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-1023 MuiButton-root-997 MuiButton-contained-1008 MuiButton-containedPrimary-1009 MuiButton-raised-1011 MuiButton-raisedPrimary-1012 MuiButton-fullWidth-1022\\"
                id=\\"fixSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-998\\"
                >
                  Submit
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1034\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;
